--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="enterprise.jar"/>
-	<classpathentry kind="lib" path="force-wsc-30.0.0-uber.jar"/>
+	<classpathentry kind="lib" path="force-wsc-30.0.0-uber.jar" sourcepath="/Users/ddew/Projects/wsc/target/force-wsc-30.0.0-sources.jar"/>
 	<classpathentry kind="lib" path="metadata.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
